--- a/css/style.css
+++ b/css/style.css
@@ -48,17 +48,14 @@ header .navbar {
   background: transparent !important;
 }
 
+@media (max-width: 991.98px) {
+  header .navbar {
+    background: rgba(0, 0, 0, 0.4) !important;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
+}
 
-
-@media (max-width: 386px) {
-site-hero overlay .container{
-width:100px;
-height:20px;
-}
-school-features d-flex.inner.media d-block feature.img{
-	width:50px;
-}
-}
 header .navbar .container {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -68,94 +65,33 @@ header .navbar .navbar-nav.absolute-right {
   right: 0;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 991.98px) {
   header .navbar .navbar-nav.absolute-right {
     position: relative;
     right: inherit;
   }
-   header .navbar {
-    background: rgba(0, 0, 0, 0.4) !important;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-  }
-  section .mb-5 h1{
-	  font-size:43px;
-  }
-   header .navbar .nav-link {
-    padding: .5rem .5rem;
-  }
- .img-md-fluid {
-    max-width: 102%;
-    position: relative;
-    left: -5px;
-	height:500px;
-   }
-	
-  .owl-carousel.home-slider .slider-item .slider-text h1 {
-    font-size: 40px;
-  }
-  .container{
-  height:100px;
-  }
-}
-@media (max-width: 414px) {
-  header .navbar .navbar-nav.absolute-right {
-    position: relative;
-    right: inherit;
-  }
-   header .navbar {
-    background: rgba(0, 0, 0, 0.4) !important;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-  }
-  section .mb-5 h1{
-    font-size:40px;
-	position: absolute;
-    top: 27px;
-    left: -2%; 
-  }
-   header .navbar .nav-link {
-    padding: .5rem .5rem;
-  }
-  .img-md-fluid {
-    max-width: 102%;
-    position: relative;
-    left: -5px;
-	height:500px;
-   }
-	
-  
-  .owl-carousel.home-slider .slider-item .slider-text h1 {
-    font-size: 40px;
-  }
-  .school-features  img {
-    padding-top: 15px;
-    left: -40px;
-    position: relative;
-  
-  }
-   section.school-features {
-   height:220px;
-   }
-   footer{
-       position: relative;
-       top: 5172px;
-   }
-    .school-features.feature img{
-		border-radius:0px;
-		
-		
-	} 
-   
 }
 
+@media (max-width: 680px) {
+  header .navbar .navbar-nav.absolute-right {
+    position: absolute;
+    right: inherit;
+  }
+ school-features d-flex .inner{
+  width:100%;
+  }
+}
 header .navbar .nav-link {
   padding: 1.7rem 1rem;
   font-size: 15px;
   outline: none !important;
 }
 
-
+@media (max-width: 991.98px) {
+  header .navbar .nav-link {
+    padding: .5rem .5rem;
+  }
+}
 
 header .navbar .nav-link:hover {
   color: #fff !important;
@@ -515,6 +451,11 @@ font-family:none;
   background-size: cover;
 }
 
+@media (max-width: 991.98px) {
+  .img-md-fluid {
+    max-width: 100%;
+  }
+}
 
 .section-cover {
   background-size: cover;
@@ -769,6 +710,11 @@ textarea.form-control {
   text-transform: uppercase;
 }
 
+@media (max-width: 991.98px) {
+  .owl-carousel.home-slider .slider-item .slider-text h1 {
+    font-size: 40px;
+  }
+}
 
 .owl-carousel.home-slider .slider-item .slider-text p {
   font-size: 20px;
